--- a/PostgreSQL/PostDocker/docker-compose.yml
+++ b/PostgreSQL/PostDocker/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   postgres:
     image: postgres:latest
@@ -11,7 +9,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - postgres_data:/Volumes/T7/Storage/postgres_data
+      - J:/Storage/postgres_data:/var/lib/postgresql/data
 
   pgadmin:
     image: dpage/pgadmin4:latest
@@ -23,6 +21,11 @@ services:
       - "5050:80"
     depends_on:
       - postgres
+    volumes:
+      - J:/Storage/pgadmin_data:/var/lib/pgadmin
 
 volumes:
-  postgres_data: 
+  postgres_data:
+    driver: local
+  pgadmin_data:
+    driver: local
