--- a/MinIO/docker-compose.yml
+++ b/MinIO/docker-compose.yml
@@ -9,7 +9,10 @@ services:
       - "9000:9000"
       - "9001:9001"
     volumes:
-      - J:/Storage/minio_data:/data
+      # Windows
+      # - J:/Storage/minio_data:/data
+      # Mac
+      - /Volumes/T7/Storage/minio_data:/data
     command: server /data --console-address ":9001"
 
 volumes:
